--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>spring-boot</module>
 		<module>spring-cloud</module>
 		<module>sping-context</module>
+		<module>spring-ann</module>
 	</modules>
 
 </project>
