--- a/spring-mvc/pom.xml
+++ b/spring-mvc/pom.xml
@@ -55,6 +55,12 @@
             <version>${spring-version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.2.0.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
@@ -77,4 +83,5 @@
         </dependency>
 
     </dependencies>
+
 </project>
