--- a/spring-mvc/src/main/webapp/WEB-INF/web.xml
+++ b/spring-mvc/src/main/webapp/WEB-INF/web.xml
@@ -6,13 +6,13 @@
 	<display-name>springmvc_mybatis1208</display-name>
 
 	<!-- 加载spring容器 -->
-<!--	<context-param>-->
-<!--		<param-name>contextConfigLocation</param-name>-->
-<!--		<param-value>classpath:applicationContext-*.xml</param-value>-->
-<!--	</context-param>-->
-<!--	<listener>-->
-<!--		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
-<!--	</listener>-->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:applicationContext.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
 
 	<!-- springmvc前端控制器 -->
 	<servlet>
@@ -23,33 +23,34 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:springmvc.xml</param-value>
 		</init-param>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>springmvc</servlet-name>
-		<!-- 第一种：*.action，访问以.action结尾 由DispatcherServlet进行解析 第二种：/，所以访问的地址都由DispatcherServlet进行解析，对于静态文件的解析需要配置不让DispatcherServlet进行解析 
+		<!-- 第一种：*.action，访问以.action结尾 由DispatcherServlet进行解析 第二种：/，所以访问的地址都由DispatcherServlet进行解析，对于静态文件的解析需要配置不让DispatcherServlet进行解析
 			使用此种方式可以实现 RESTful风格的url 第三种：/*，这样配置不对，使用这种配置，最终要转发到一个jsp页面时， 仍然会由DispatcherServlet解析jsp地址，不能根据jsp页面找到handler，会报错。 -->
 		<url-pattern>*.action</url-pattern>
 	</servlet-mapping>
 
 	<!-- post乱码过虑器 -->
-<!--	<filter>-->
-<!--		<filter-name>encodingFilter</filter-name>-->
-<!--		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>-->
-<!--		<init-param>-->
-<!--			<param-name>encoding</param-name>-->
-<!--			<param-value>UTF-8</param-value>-->
-<!--		</init-param>-->
-<!--		<init-param>-->
-<!--			<param-name>forceEncoding</param-name>-->
-<!--			<param-value>true</param-value>-->
-<!--		</init-param>-->
-<!--	</filter>-->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
 
-<!--	<filter-mapping>-->
-<!--		<filter-name>encodingFilter</filter-name>-->
-<!--		<url-pattern>/*</url-pattern>-->
-<!--	</filter-mapping>-->
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
