--- a/spring-mvc/src/main/webapp/WEB-INF/web.xml
+++ b/spring-mvc/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 		 version="3.1">
-	<display-name>springmvc_mybatis1208</display-name>
+	<display-name>springmvc</display-name>
 
 	<!-- 加载spring容器 -->
 	<context-param>
@@ -12,6 +12,15 @@
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
+	<!-- 添加日志监听器 -->
+	<context-param>
+		<param-name>logbackConfigLocation</param-name>
+		<param-value>classpath:logback-spring.xml</param-value>
+	</context-param>
+	<listener>
+		<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
 	</listener>
 
 	<!-- springmvc前端控制器 -->
