--- a/spring-boot/src/main/resources/application.yml
+++ b/spring-boot/src/main/resources/application.yml
@@ -2,3 +2,15 @@ server:
   port: 80
   servlet:
     context-path: /test
+
+spring:
+  data:
+    elasticsearch:
+      cluster-name: my-application
+      cluster-nodes: 127.0.0.1:9300
+      address: 127.0.0.1
+      port: 9300
+      repositories:
+        enabled: true
+
+
